# rvra-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.21bd53d  CMakeLists.txt.user.34ee3c0  CMakeLists.txt~  LICENSE  README.md  README.md~  custom_36_dict.h  detect_markers.cpp  detector_params.yml  flying-markers.webm  lost-in-space.webm  one_marker.webm  out_calib.yml  out_camera_calibration.yml  out_camera_data.xml
VSSolutions/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Interface_Test.vcxproj  Interface_Test.vcxproj.filters  Project.sln  ReactCamera.vcxproj  ReactCamera.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  detect.vcxproj  detect.vcxproj.filters
VSSolutions/ext/Maximilian/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  maximilian-exec.vcxproj  maximilian-exec.vcxproj.filters  maximilian.vcxproj  maximilian.vcxproj.filters
VSSolutions/ext/Maximilian/ext/portaudio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  portaudio.vcxproj  portaudio.vcxproj.filters  portaudio_static.vcxproj  portaudio_static.vcxproj.filters
VSSolutions/ext/aruco/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Findaruco.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  aruco-uninstalled.pc  aruco.pc  aruco.sln  cmake_install.cmake  cmake_uninstall.cmake  doxy.config  uninstall.vcxproj  uninstall.vcxproj.filters
VSSolutions/ext/aruco/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  aruco.vcxproj  aruco.vcxproj.filters  cmake_install.cmake
VSSolutions/ext/aruco/utils/: INSTALL.vcxproj  INSTALL.vcxproj.filters  aruco_print_dictionary.vcxproj  aruco_print_dictionary.vcxproj.filters  aruco_print_marker.vcxproj  aruco_print_marker.vcxproj.filters  aruco_simple.vcxproj  aruco_simple.vcxproj.filters  aruco_test.vcxproj  aruco_test.vcxproj.filters  aruco_tracker.vcxproj  aruco_tracker.vcxproj.filters  cmake_install.cmake
VSSolutions/ext/aruco/utils_calibration/: INSTALL.vcxproj  INSTALL.vcxproj.filters  aruco_calibration.vcxproj  aruco_calibration.vcxproj.filters  aruco_calibration_fromimages.vcxproj  aruco_calibration_fromimages.vcxproj.filters  cmake_install.cmake
VSSolutions/ext/aruco/utils_markermap/: INSTALL.vcxproj  INSTALL.vcxproj.filters  aruco_create_markermap.vcxproj  aruco_create_markermap.vcxproj.filters  aruco_markermap_pix2meters.vcxproj  aruco_markermap_pix2meters.vcxproj.filters  aruco_simple_markermap.vcxproj  aruco_simple_markermap.vcxproj.filters  aruco_test_markermap.vcxproj  aruco_test_markermap.vcxproj.filters  cmake_install.cmake
ext/Maximilian/: CMakeLists.txt  main.cpp  maximilian.cpp  maximilian.h  player.cpp  player.h
ext/aruco/: CMakeLists.txt
ext/aruco/src/: dictionary.cpp
ext/aruco/src/markerlabelers/: dictionary_based.cpp
include/: AmNode.hpp  AudioGraph.hpp  AudioNode.hpp  AudioParams.hpp  DestinationNode.hpp  FmNode.hpp  Interfaces.hpp  MarkerGraph.hpp  MiscConsts.hpp  Nodes.hpp  NoiseNode.hpp  NumericalNode.hpp  OscNode.hpp  SampleNode.hpp  xMarker.hpp
marker-creator/: CMakeLists.txt
src/: AmNode.cpp  AudioGraph.cpp  AudioNode.cpp  AudioParams.cpp  DestinationNode.cpp  FmNode.cpp  Interfaces.cpp  Interfaces_Tests.cpp  MarkerGraph.cpp  NoiseNode.cpp  NumericalNode.cpp  OscNode.cpp  SampleNode.cpp  detect_markers.cpp  main.cpp  xMarker.cpp  xMarker.cpp.autosave
